# azure-prompt-flow

./: .gitignore  README.md  answer.jinja2  chat.jinja2  check_knowledge_base.py  env.example  flow.dag.yaml  pyproject.toml
.promptflow/: flow.layout.json  flow.tools.json  flow.uihint.json
.promptflow/lkg_sources/: .chat.tmp.jinja2  .check_knoledge_base.tmp.py  ask_more_infomation.jinja2  requirements.txt  summarize_contents.jinja2
prompts/: ask_more_information.jinja2
retrieval_flow/: check_knowledge_base.py  flow.dag.yaml
